# satellite-consumer

./: .all-contributorsrc  .gitignore  Dockerfile  Makefile  README.md  create_test_duplicates.py  pyproject.toml
.github/: pull-request-template.md
.github/hooks/: commit-msg  pre-push
.github/workflows/: branch_ci.yml  build.yml  merged_ci.yml  tag.yml  tagged_ci.yml  test.yml
src/satellite_consumer/: __init__.py  cleanup.py  config.py  consume.py  consumer.py  download_eumetsat.py  download_gk2a.py  download_goes.py  download_himawari.py  exceptions.py  main.py  models.py  process.py  request_patch.py  run.py  storage.py  test_download_eumetsat.py  test_duplicate_timestamps.py  test_mocks.py  test_storage.py  test_validate.py  validate.py
src/satellite_consumer/cmd/: application.conf  main.py
