# --- PROJECT CONFIGURATION --- #

[build-system]
requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

# Metadata (see https://peps.python.org/pep-0621/)
[project]
name = "satellite-consumer"
dynamic = ["version"] # Set automtically using git: https://setuptools-git-versioning.readthedocs.io/en/stable/
description = "Tool for converting raw EUMETSAT NAT files to Zarr"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12.0"
license = {text = "MIT License"}
authors = [
    { name = "Open Climate Fix Team", email = "info@openclimatefix.org" },
    { name = "Sol Cotton", email = "sol@openclimatefix.org" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "Cartopy==0.24.1",
    "eumdac==3.0.0",
    "joblib==1.4.2",
    "loguru==0.7.3",
    "satpy[seviri_l1b_native,seviri_l1b_nc] == 0.57.0",
    "sentry-sdk==2.33.2",
]

[dependency-groups]
dev = [
    # Testing
    "unittest-xml-reporting",
    "moto[s3,server] == 5.0.28",
    # Linting and type checking
    "mypy",
    "ruff >= 0.9.2",
    "types-pyyaml",
    "pandas-stubs",
    # LSP Support
    "python-lsp-server",
    "pylsp-mypy",
    "python-lsp-ruff",
    "ty>=0.0.1a8",
]

[project.scripts]
sat-consumer-cli = "satellite_consumer.cmd.main:cli_entrypoint"
sat-consumer = "satellite_consumer.cmd.main:env_entrypoint"

[project.urls]
repository = "https://github.com/openclimatefix/satellite-consumer"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools-git-versioning]
enabled = true

# --- LINTING AND TYPING CONFIGURATION --- #

# MyPy configuration
# * See https://mypy.readthedocs.io/en/stable/index.html
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Ignore missing imports for libraries that don't have them.
# If they are ever made, remove from here!
module = [
    "botocore.session",
    "botocore.client",
    "fsspec",
    "fsspec.implementations",
    "fsspec.implementations.local",
    "fsspec.implementations.asyn_wrapper",
    "gcsfs",
    "joblib",
    "s3fs",
    "zarr",
]
ignore_missing_imports = true

# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
line-length = 100
indent-width = 4
exclude = ["__init__.py"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "COM", # flake8 commas
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "DTZ", # flake8 datetimes
    "Q",   # flake8 quotes
    "TCH", # flake8 typecheck
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
ignore = [
    "D203", "D213", "D215", "D400", "D401", "D404", "D406",
    "D407", "D408", "D409", "D413",
]

[tool.ruff.lint.per-file-ignores]
"test*" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100

# --- DOCUMENTATION CONFIGURATION --- #

[tool.pydoctor]
add-package = ["src/ocf-python-project"]
project-base-dir = "src/ocf-python-project"
docformat = "google"
html-output = "docs"
theme = "classic"
privacy = [
    "HIDDEN:**.test_*",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
satellite-consumer = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
netcdf4 = "*"
h5netcdf = "*"
pyproj = "*"
zarr = "*"
icechunk = "*"
xarray = "*"
pyresample = "*"
hdf5plugin = "*"
fsspec = "*"
s3fs = "*"
gcsfs = "*"
requests = "*"
ruff = ">=0.12.7,<0.13"
pyspectral = ">=0.13.6,<0.14"
