# --- PROJECT CONFIGURATION --- #

[build-system]
requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

# Metadata (see https://peps.python.org/pep-0621/)
[project]
name = "satellite-consumer"
dynamic = ["version"] # Set automtically using git: https://setuptools-git-versioning.readthedocs.io/en/stable/
description = "Tool for converting raw EUMETSAT NAT files to Zarr"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12.0,<3.14"
license = {text = "MIT License"}
authors = [
    { name = "Open Climate Fix Team", email = "info@openclimatefix.org" },
    { name = "Sol Cotton", email = "sol@openclimatefix.org" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    # satpy is still unstable. Caution is advised when changing the satpy version to make sure we
    # don't break compatibility with our archives. This has happened previosuly and is difficult to
    # trace
    "satpy[seviri-l1b-native,seviri-l1b-nc]==0.59.0",
    "pyhocon>=0.3.61",
    "xarray>=2025.11.0",
    "eumdac>=3.0.0",
    "fsspec>=2025.2.0",
    "gcsfs>=2025.2.0",
    "pandas>=3.0.0,<4.0.0",
    "pyproj>=3.7.2",
    "pyresample>=1.32.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "s3fs>=2025.2.0",
    "icechunk>=1.0.0",
    "zarr>=3.1.5",
    "hdf5plugin>=5.1.0",
    "sentry-sdk>=2.33.2",
    "asyncio",
]

[dependency-groups]
dev = [
    # Testing
    "unittest-xml-reporting",
    "moto[s3,server] == 5.0.28",
    # Linting and type checking
    "mypy",
    "ruff >= 0.9.2",
    "types-pyyaml",
    "types-requests",
    "pandas-stubs",
    # LSP Support
    "python-lsp-server",
    "pylsp-mypy",
    "python-lsp-ruff",
    "ty>=0.0.1a8",
]

[project.scripts]
sat-consumer = "satellite_consumer.cmd.main:main"

[project.urls]
repository = "https://github.com/openclimatefix/satellite-consumer"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.conf"]

[tool.setuptools-git-versioning]
enabled = true

# --- LINTING AND TYPING CONFIGURATION --- #

# MyPy configuration
# * See https://mypy.readthedocs.io/en/stable/index.html
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Ignore missing imports for libraries that don't have them.
# If they are ever made, remove from here!
module = [
    "zarr",
    "pyhocon",
    "fsspec",
    "gcsfs",
    "s3fs",
    "fsspec.implementations.local",
    "botocore.session",
    "botocore.client",
]
ignore_missing_imports = true

# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
line-length = 100
indent-width = 4
exclude = ["__init__.py"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "COM", # flake8 commas
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "DTZ", # flake8 datetimes
    "Q",   # flake8 quotes
    "TCH", # flake8 typecheck
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
ignore = [
    "D203", "D213", "D215", "D400", "D401", "D404", "D406",
    "D407", "D408", "D409", "D413", "COM812", # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"test*" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100

# --- DOCUMENTATION CONFIGURATION --- #

[tool.pydoctor]
add-package = ["src/ocf-python-project"]
project-base-dir = "src/ocf-python-project"
docformat = "google"
html-output = "docs"
theme = "classic"
privacy = [
    "HIDDEN:**.test_*",
]
