# --- PROJECT CONFIGURATION --- #

[build-system]
requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

# Metadata (see https://peps.python.org/pep-0621/)
[project]
name = "satellite-consumer"
dynamic = ["version"] # Set automtically using git: https://setuptools-git-versioning.readthedocs.io/en/stable/
description = "Tool for converting raw EUMETSAT NAT files to Zarr"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12.0,<3.14"
license = {text = "MIT License"}
authors = [
    { name = "Open Climate Fix Team", email = "info@openclimatefix.org" },
    { name = "Sol Cotton", email = "sol@openclimatefix.org" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    # satpy is still unstable. Caution is advised when changing the satpy version to make sure we
    # don't break compatibility with our archives. This has happened previosuly and is difficult to
    # trace
    "satpy[all]>=0.60.0,<0.61",
    "pyhocon>=0.3.63,<0.4",
    "xarray",
    "eumdac>=3.1.1,<4",
    "fsspec",
    "gcsfs>=2026,<2027",
    "pandas",
    "pyproj",
    "pyresample>=1.35.0,<2",
    "pyyaml",
    "requests",
    "s3fs>=2026,<2027",
    "icechunk>=2.0.6,<3",
    "hdf5plugin>=6.0.0,<7",
    "sentry-sdk>=2.63.0,<3",
    "asyncio>=4.0.0,<5",
]

[dependency-groups]
dev = [
    # Testing
    "unittest-xml-reporting",
    "moto[s3,server]",
    # Linting and type checking
    "mypy",
    "ruff",
    "types-pyyaml",
    "types-requests",
    "pandas-stubs",
    # LSP Support
    "python-lsp-server",
    "pylsp-mypy",
    "python-lsp-ruff",
    "ty",
]

[project.scripts]
sat-consumer = "satellite_consumer.cmd.main:main"

[project.urls]
repository = "https://github.com/openclimatefix/satellite-consumer"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.conf"]

[tool.setuptools-git-versioning]
enabled = true

# --- LINTING AND TYPING CONFIGURATION --- #

# MyPy configuration
# * See https://mypy.readthedocs.io/en/stable/index.html
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Ignore missing imports for libraries that don't have them.
# If they are ever made, remove from here!
module = [
    "zarr",
    "pyhocon",
    "fsspec",
    "gcsfs",
    "s3fs",
    "fsspec.implementations.local",
    "botocore.session",
    "botocore.client",
]
ignore_missing_imports = true

# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
line-length = 100
indent-width = 4
exclude = ["__init__.py"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "COM", # flake8 commas
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "DTZ", # flake8 datetimes
    "Q",   # flake8 quotes
    "TCH", # flake8 typecheck
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
ignore = [
    "D203", "D213", "D215", "D400", "D401", "D404", "D406",
    "D407", "D408", "D409", "D413", "COM812", # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"test*" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100

# --- DOCUMENTATION CONFIGURATION --- #

[tool.pydoctor]
add-package = ["src/ocf-python-project"]
project-base-dir = "src/ocf-python-project"
docformat = "google"
html-output = "docs"
theme = "classic"
privacy = [
    "HIDDEN:**.test_*",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
satellite-consumer = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyproj = ">=3.7.2,<4"
h5netcdf = ">=1.8.1,<2"
netcdf4 = ">=1.7.4,<2"
pykdtree = ">=1.4.3,<2"
pip = ">=26.1.2,<27"
pyspectral = ">=0.14.3,<0.15"
eccodes = ">=2.47.0,<3"
rioxarray = ">=0.22.0,<0.23"
rasterio = ">=1.5.0,<2"
pyarrow = ">=24.0.0,<25"
numba = ">=0.65.1,<0.66"
pygrib = ">=2.1.8,<3"
sqlite = ">=3.53.2,<4"
libsqlite = ">=3.53.2,<4"

